[tool.poetry]
name = "demo"
version = "0.1.0"
description = "the Hello World tutorial from the Panda3D docs!"
authors = ["egee-irl <brian@egee.io>"]
license = "MIT"

[tool.poetry.scripts]
run = 'demo.demo:main'

[tool.poetry.dependencies]
python = "^3.8"
panda3d = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
